@startuml
title SO DO LOP 3 TANG - NHAP HO SO LUU TRU

top to bottom direction
skinparam shadowing false
skinparam linetype ortho
skinparam nodesep 55
skinparam ranksep 75
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor #FFFACD
  BorderColor #9B7B7B
}

package "TANG GIAO DIEN" as GUI_LAYER #EDF9EC {
  class MHNhapHoSoLuuTru #BFE8BA {
    - lblTieuDePhieuCoc: Label
    - lblSoLuongPhieuHomNay: Label
    - txtTimKiemPhieuCoc: TextBox
    - pnlDanhSachPhieuCoc: Panel
    - cardPhieuCoc: Panel
    - lblMaPhieuCocCard: Label
    - lblTenKhachCard: Label
    - lblSDTCard: Label
    - lblPhongCard: Label
    - badgeTrangThaiThanhToanCard: Badge
    - lblMaPhieuCocDangChon: Label
    - lblTenKhachDangChon: Label
    - badgeDaThanhToan: Badge
    - badgeSoGiuong: Badge
    - badgeHinhThucThue: Badge
    - lblPhongDangChon: Label
    - lblHoTen: Label
    - txtHoTen: TextBox {readOnly}
    - lblSoDienThoai: Label
    - txtSoDienThoai: TextBox {readOnly}
    - lblEmail: Label
    - txtEmail: TextBox {readOnly}
    - lblGioiTinh: Label
    - cboGioiTinh: ComboBox {readOnly}
    - lblNgaySinh: Label
    - txtNgaySinh: TextBox {readOnly}
    - lblQuocTich: Label
    - txtQuocTich: TextBox {readOnly}
    - lblLoaiGiayTo: Label
    - cboLoaiGiayTo: ComboBox {readOnly}
    - lblSoGiayTo: Label
    - txtSoGiayTo: TextBox {readOnly}
    - lblDiaChiThuongTru: Label
    - txtDiaChiThuongTru: TextBox
    - txtSoNhaTenDuong: TextBox
    - cboTinhTP: ComboBox
    - cboQuanHuyen: ComboBox
    - cboPhuongXa: ComboBox
    - txtDiaChiNuocNgoai: TextBox
    - grpNguoiOCung: GroupBox
    - btnThemNguoiOCung: Button
    - btnLuuHoSo: Button
    --
    + taiDanhSachPhieuCoc()
    + clickChonPhieuCoc()
    + hienThiThongTinTuPhieuCoc()
    + hienThiDanhSachPhieuCoc()
    + hienThiPopupThemNguoiOCung()
    + xacNhanNguoiOCung(thanhVien: KhachHang)
    + capNhatDanhSachNguoiOCung()
    + nhapThongTinCuTru()
    + clickThemNguoiOCung()
    + clickLuuHoSo()
    + hienThiThongBao()
    + hienThiLoi()
  }

}

package "TANG NGHIEP VU" as BUS_LAYER #FFF9E6 {
  class NhapHoSoLuuTru #F4E3A2 {
    + LayDanhSachChoNhap(text: String): IReadOnlyList<PhieuCoc>
    + LayChiTiet(maPhieuCoc: String): PhieuCoc
    + NhapHoSo(maPhieuCoc: String, diaChiThuongTru: String, cacThanhVien: List<KhachHang>): PhieuCoc
  }

  class PhieuCoc #F4E3A2 {
    - MaPhieuCoc: String
    - HanThanhToan: DateTime
    - HinhThucThue: String
    - SoGiuongThue: Integer
    - TongTien: Decimal
    - ThoiDiemCoc: DateTime
    - AnhMinhChung: String
    - PhuongThucThanhToan: String
    - LyDoYeuCauBoSung: String
    - TrangThai: String
    - MaKH: String
    - MaPhong: String
    - MaNV: String
    - KhachHang: KhachHang
    - Phong: Phong
    - Giuongs: List<Giuong>
    - ThanhViens: List<ThanhVienDangKy>
    --
    + LayPhieuCocDaThanhToanNhanPhongHomNay(text: String): IReadOnlyList<PhieuCoc>
    + DocChiTiet(maPhieuCoc: String): PhieuCoc
    + KiemTraDaThanhToan()
    + KiemTraHinhThucThue()
    + KiemTraSoLuongThanhVien(soLuongThanhVien: Integer)
    + CapNhatTrangThai(trangThai: String)
    + LuuCapNhatTrangThai()
  }

  class LichHen #F4E3A2 {
    - MaLH: String
    - NgayHen: DateTime
    - GioHen: TimeSpan
    - LoaiLichHen: String
    - TrangThai: String
    - MaPDK: String
    - MaPhieuCoc: String
    - MaHD: String
    - MaNV: String
    - MaCN: String
    - KhachHang: KhachHang
    --
    + DocTheoMaPhieuCoc(maPhieuCoc: String): LichHen
    + KiemTraLoaiNhanPhong()
    + KiemTraTrangThaiHopLe()
  }

  class KhachHang #F4E3A2 {
    - MaKH: String
    - HoTen: String
    - NgaySinh: DateTime
    - GioiTinh: String
    - QuocTich: String
    - LoaiGiayTo: String
    - SoGiayTo: String
    - DiaChiThuongTru: String
    - SDT: String
    - Email: String
    --
    + TimTheoSoGiayTo(soGiayTo: String): KhachHang
    + KiemTraThongTinBatBuoc(kh: KhachHang)
    + KiemTraDinhDangEmail(email: String): Boolean
    + KiemTraSoGiayTo(soGiayTo: String, loaiGiayTo: String): Boolean
    + KiemTraNgaySinh(ngaySinh: DateTime): Boolean
    + KiemTraTrungSoGiayTo(nguoiDaiDien: KhachHang, cacThanhVien: List<KhachHang>)
    + ChuanHoaThongTinNhanDang()
    + CapNhatDiaChiThuongTru(diaChiThuongTru: String)
    + LuuDiaChiThuongTru()
    + Them()
  }

  class ThanhVienDangKy #F4E3A2 {
    - MaPhieuCoc: String
    - MaKH: String
    - VaiTro: String
    - TrangThaiDuyet: String
    --
    + TaoDaiDien(maPhieuCoc: String, maKH: String): ThanhVienDangKy
    + TaoThanhVien(maPhieuCoc: String, maKH: String): ThanhVienDangKy
    + KiemTraVaiTroHopLe()
    + XoaTheoPhieuCoc(maPhieuCoc: String)
    + ThemHangLoat(danhSach: List<ThanhVienDangKy>)
  }

  class Phong #F4E3A2 {
    - MaPhong: String
    - SoPhong: String
    - ToaNha: String
    - Tang: String
    - GioiTinhChoPhep: String
    - TrangThai: String
    - MaLP: String
    - MaCN: String
    - LoaiPhong: LoaiPhong
    - Giuongs: List<Giuong>
    --
    + KiemTraSucChua(soLuongNguoi: Integer)
  }

  class LoaiPhong #F4E3A2 {
    - MaLP: String
    - TenLoaiPhong: String
    - SucChua: Integer
    - GiaThue: Decimal
  }

  class Giuong #F4E3A2 {
    - MaGiuong: String
    - SoGiuong: String
    - TrangThai: String
    - MaPhong: String
  }
}

package "TANG TRUY CAP DU LIEU" as DAL_LAYER #EDF6FC {
  class LichHenDB #BFDCF0 {
    + DocTheoMaPhieuCoc(maPhieuCoc: String): LichHen
  }

  class PhieuCocDB #BFDCF0 {
    + LayPhieuCocDaThanhToanNhanPhongHomNay(text: String): IReadOnlyList<PhieuCoc>
    + DocChiTiet(maPhieuCoc: String): PhieuCoc
    + CapNhatTrangThai(maPhieuCoc: String, trangThai: String)
  }

  class KhachHangDB #BFDCF0 {
    + TimTheoSoGiayTo(soGiayTo: String): KhachHang
    + Them(khachHang: KhachHang)
    + CapNhatDiaChiThuongTru(maKH: String, diaChiThuongTru: String)
  }

  class ThanhVienDangKyDB #BFDCF0 {
    + XoaTheoPhieuCoc(maPhieuCoc: String)
    + ThemHangLoat(danhSach: List<ThanhVienDangKy>)
  }
}

' Boundary dieu khien use case nhap ho so.
MHNhapHoSoLuuTru  o--  NhapHoSoLuuTru

' Use case dieu phoi cac entity.
NhapHoSoLuuTru  o--  LichHen
NhapHoSoLuuTru  o--  PhieuCoc
NhapHoSoLuuTru  o--  KhachHang
NhapHoSoLuuTru  o--  ThanhVienDangKy

' Trong BLL: duong thang, khong huong.
PhieuCoc "1" -- "1..*" ThanhVienDangKy : gom
PhieuCoc "0..*" -- "1" KhachHang : dai dien
PhieuCoc "0..*" -- "1" Phong : dat
LichHen "1" -- "0..1" PhieuCoc : nhan
ThanhVienDangKy "0..*" -- "1" KhachHang : thong tin
Phong "0..*" -- "1" LoaiPhong : thuoc
Phong "1" -- "1..*" Giuong : chua

' Aggregation giua business va data access.
LichHen  o--  LichHenDB
PhieuCoc  o--  PhieuCocDB
KhachHang  o--  KhachHangDB
ThanhVienDangKy  o--  ThanhVienDangKyDB


GUI_LAYER -[hidden]down- BUS_LAYER
BUS_LAYER -[hidden]down- DAL_LAYER
NhapHoSoLuuTru -[hidden]down- LichHenDB
Giuong -[hidden]down- LichHenDB
@enduml
